# nps-dashboard

./: .gitignore  .python-version  .replit
app/: package-lock.json
app/pages/: +layout.svelte
app/pages/cuts/: yearly.md
dbt/: pyproject.toml
dbt/nps_data/: .python-version  .sqlfluff  .user.yml  dbt_project.yml  profiles.yml
dbt/nps_data/.dbt_coves/: config.yml
dbt/nps_data/.dbt_coves/templates/: model_props.yml  staging_model.sql  staging_model_props.yml
dbt/nps_data/macros/dbt_tools/: generate_alias_name.sql  generate_schema_name.sql
dbt/nps_data/models/analysis/: analysis__calendar.sql
dbt/nps_data/models/raw/raw_nps_api/: sources.yaml
dbt/nps_data/models/raw/raw_nps_boundaries/: raw_nps_boundaries__boundaries.sql
dbt/nps_data/models/staging/: models.yaml
dbt/nps_data/models/staging/stg_nps_api/: stg_nps_api__campgrounds.sql  stg_nps_api__parkinglots.sql  stg_nps_api__visitorcenters.sql  stg_nps_api__webcams.sql
dbt/nps_data/models/staging/stg_nps_boundaries/: stg_nps_boundaries__boundaries.sql  stg_nps_boundaries__parks.sql  stg_nps_boundaries__regions.sql  stg_nps_boundaries__states.sql
dbt/nps_data/models/staging/stg_nps_irma/: stg_nps_irma__parks.sql  stg_nps_irma__usage_1979_2023.sql
dbt/nps_data/seeds/administrative_boundaries_of_national_parks.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000009.gdbtablx  a00000009.spx
utils/: bigquery_extract.ipynb
(+9 files in other folders)
